# docs/swagger.json
@@ -243,7 +243,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateReceptionHospitalRequest"
+                            "$ref": "#/definitions/models.UpdateSmpReceptionRequest"
                         }
                     }
                 ],
@@ -1094,9 +1094,6 @@
         "entities.MedService": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
                 },
@@ -1107,15 +1104,6 @@
                 "price": {
                     "type": "integer",
                     "example": 100
-                },
-                "receptionSMP": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.ReceptionSMP"
-                    }
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
@@ -1875,6 +1863,47 @@
                         }
                     ],
                     "example": "scheduled"
+                }
+            }
+        },
+        "models.UpdateSmpReceptionRequest": {
+            "type": "object",
+            "required": [
+                "doctor_id",
+                "emergency_call_id",
+                "patient_id",
+                "reception_smp_id"
+            ],
+            "properties": {
+                "diagnosis": {
+                    "type": "string",
+                    "example": "ОРВИ"
+                },
+                "doctor_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "emergency_call_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "med_services": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.MedService"
+                    }
+                },
+                "patient_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "reception_smp_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "recommendations": {
+                    "type": "string",
+                    "example": "Постельный режим"
                 }
             }
         }
